<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.melodie.player.ui.library.LibraryFragment"
        android:label="@string/nav_library" />

    <fragment
        android:id="@+id/albumSongsFragment"
        android:name="com.melodie.player.ui.library.AlbumSongsFragment"
        android:label="@string/library_album_tracks_label">
        <argument
            android:name="album_id"
            app:argType="long" />
        <argument
            android:name="album_name"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/artistSongsFragment"
        android:name="com.melodie.player.ui.library.ArtistSongsFragment"
        android:label="@string/library_artist_tracks_label">
        <argument
            android:name="artist_name"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.melodie.player.ui.search.SearchFragment"
        android:label="@string/nav_search" />


    <fragment
        android:id="@+id/playerFragment"
        android:name="com.melodie.player.ui.player.PlayerFragment"
        android:label="Player" />

    <fragment
        android:id="@+id/equalizerFragment"
        android:name="com.melodie.player.ui.equalizer.EqualizerFragment"
        android:label="@string/settings_equalizer" />

    <fragment
        android:id="@+id/driveFragment"
        android:name="com.melodie.player.ui.drive.DriveFragment"
        android:label="@string/drive_title" />

    <fragment
        android:id="@+id/foldersFragment"
        android:name="com.melodie.player.ui.library.FoldersFragment"
        android:label="@string/settings_folders" />

</navigation>

